force-app/main/default/objects/ChronarPay_General_Data__mdt/ChronarPay_General_Data__mdt.object-meta.xml
<CustomObject>
    <label>ChronarPay General Data</label>
    <pluralLabel>ChronarPay General Data</pluralLabel>
</CustomObject>