force-app/main/default/objects/ChronarPay_General_Data__mdt/fields/CVV_Use_Control__c.field-meta.xml
<CustomField>
    <fullName>CVV_Use_Control__c</fullName>
    <label>CVV Use Control</label>
    <length>50</length>
    <type>Text</type>
</CustomField>