force-app/main/default/objects/ChronarPay_General_Data__mdt/fields/Is_CVV_Use_Control_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_CVV_Use_Control_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CVV Use Control Enabled</label>
    <type>Checkbox</type>
</CustomField>