force-app/main/default/objects/ChronarPay_General_Data__mdt/fields/Is_Partial_Payment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Partial_Payment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partial Payment Allowed</label>
    <type>Checkbox</type>
</CustomField>